// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders dark without error 1`] = `
<DocumentFragment>
  :root,
.sxvxinr {
  --colors-yellow100: #ffeecc;
  --colors-yellow200: #ffde99;
  --colors-yellow300: #ffcd66;
  --colors-yellow400: #ffbd33;
  --colors-yellow500: #ffac00;
  --colors-yellow600: #cc8a00;
  --colors-yellow700: #996700;
  --colors-yellow800: #664500;
  --colors-yellow900: #332200;
  --colors-grey100: #d8d8d8;
  --colors-grey200: #b2b2b2;
  --colors-grey300: #8b8b8b;
  --colors-grey400: #656565;
  --colors-grey500: #3e3e3e;
  --colors-grey600: #323232;
  --colors-grey700: #252525;
  --colors-grey800: #191919;
  --colors-grey900: #0c0c0c;
  --colors-blue100: #d4e6f3;
  --colors-blue200: #a8cce7;
  --colors-blue300: #7db3da;
  --colors-blue400: #5199ce;
  --colors-blue500: #2680c2;
  --colors-blue600: #1e669b;
  --colors-blue700: #174d74;
  --colors-blue800: #0f334e;
  --colors-blue900: #081a27;
  --colors-green100: #d4eee6;
  --colors-green200: #a9ddcd;
  --colors-green300: #7dcdb5;
  --colors-green400: #52bc9c;
  --colors-green500: #27ab83;
  --colors-green600: #1f8969;
  --colors-green700: #17674f;
  --colors-green800: #104434;
  --colors-green900: #08221a;
  --colors-red100: #f1d3d3;
  --colors-red200: #e3a8a8;
  --colors-red300: #d67c7c;
  --colors-red400: #c85151;
  --colors-red500: #ba2525;
  --colors-red600: #951e1e;
  --colors-red700: #701616;
  --colors-red800: #4a0f0f;
  --colors-red900: #250707;
  --colors-orange100: #fae4d7;
  --colors-orange200: #f5c8ae;
  --colors-orange300: #f0ad86;
  --colors-orange400: #eb915d;
  --colors-orange500: #e67635;
  --colors-orange600: #b85e2a;
  --colors-orange700: #8a4720;
  --colors-orange800: #5c2f15;
  --colors-orange900: #2e180b;
  --colors-transparency100: hsla(0,0%,0%,0.1);
  --colors-transparency200: hsla(0,0%,0%,0.2);
  --colors-transparency300: hsla(0,0%,0%,0.3);
  --colors-transparency400: hsla(0,0%,0%,0.4);
  --colors-transparency500: hsla(0,0%,0%,0.5);
  --colors-transparency600: hsla(0,0%,0%,0.6);
  --colors-transparency700: hsla(0,0%,0%,0.7);
  --colors-transparency800: hsla(0,0%,0%,0.8);
  --colors-transparency900: hsla(0,0%,0%,0.9);
  --colors-brandYellow: #ffbb00;
  --colors-brandGrey: #565555;
  --colors-white: #FFFFFF;
  --colors-black: #000000;
  --colors-background: #f7f7f7;
  --colors-paper: var(--colors-white);
  --colors-text: #3b3b3b;
  --colors-primary: var(--colors-grey500);
  --colors-primaryHighlight: var(--colors-grey700);
  --colors-primaryLowlight: var(--colors-grey400);
  --colors-primaryBackground: var(--colors-grey100);
  --colors-primaryContrast: var(--colors-brandYellow);
  --colors-primaryActive: #ffbb00aa;
  --colors-default: var(--colors-black);
  --colors-defaultHighlight: var(--colors-transparency100);
  --colors-defaultLowlight: var(--colors-grey400);
  --colors-defaultBackground: transparent;
  --colors-defaultContrast: var(--colors-white);
  --colors-defaultActive: var(--colors-transparency200);
  --colors-error: var(--colors-red500);
  --colors-errorHighlight: var(--colors-red600);
  --colors-errorLowlight: var(--colors-red300);
  --colors-errorBackground: var(--colors-red100);
  --colors-errorContrast: var(--colors-paper);
  --colors-errorActive: #ba2525aa;
  --colors-success: var(--colors-green500);
  --colors-successHighlight: var(--colors-green600);
  --colors-successLowlight: var(--colors-green300);
  --colors-successBackground: var(--colors-green100);
  --colors-successContrast: var(--colors-paper);
  --colors-successActive: #27ab83aa;
  --colors-warning: var(--colors-orange500);
  --colors-warningHighlight: var(--colors-orange600);
  --colors-warningLowlight: var(--colors-orange300);
  --colors-warningBackground: var(--colors-orange100);
  --colors-warningContrast: var(--colors-paper);
  --colors-warningActive: #e67635aa;
  --colors-info: var(--colors-blue500);
  --colors-infoHighlight: var(--colors-blue600);
  --colors-infoLowlight: var(--colors-blue300);
  --colors-infoBackground: var(--colors-blue100);
  --colors-infoContrast: var(--colors-paper);
  --colors-infoActive: #2680c2aa;
  --space-0: 0px;
  --space-1: 4px;
  --space-2: 8px;
  --space-3: 12px;
  --space-4: 16px;
  --space-5: 24px;
  --space-6: 32px;
  --space-7: 48px;
  --space-8: 64px;
  --space-9: 96px;
  --space-10: 128px;
  --space-11: 192px;
  --space-12: 256px;
  --space-13: 384px;
  --space-14: 512px;
  --space-15: 640px;
  --space-16: 768px;
  --sizes-0: 0px;
  --sizes-1: 4px;
  --sizes-2: 8px;
  --sizes-3: 12px;
  --sizes-4: 16px;
  --sizes-5: 24px;
  --sizes-6: 32px;
  --sizes-7: 48px;
  --sizes-8: 64px;
  --sizes-9: 96px;
  --sizes-10: 128px;
  --sizes-11: 192px;
  --sizes-12: 256px;
  --sizes-13: 384px;
  --sizes-14: 512px;
  --sizes-15: 640px;
  --sizes-16: 768px;
  --sizes-sm: 600px;
  --sizes-md: 960px;
  --sizes-lg: 1280px;
  --sizes-xl: 1920px;
  --fontSizes-0: 16px;
  --fontSizes-1: 18px;
  --fontSizes-2: 20px;
  --fontSizes-3: 24px;
  --fontSizes-4: 30px;
  --fontSizes-5: 36px;
  --fontSizes-6: 48px;
  --fontSizes-7: 60px;
  --fontSizes-8: 72px;
  --fontSizes--2: 12px;
  --fontSizes--1: 14px;
  --fonts-system: -apple-system, BlinkMacSystemFont, "San Francisco", Roboto,  "Segoe UI", "Helvetica Neue";
  --fonts-display: "Helvetica Neue", "Segoe UI", Helvetica, Arial, sans-serif;
  --fonts-monospace: "SFMono-Regular", Consolas, "Liberation Mono", "Andale Mono", "Ubuntu Mono", Menlo, Courier, monospace;
  --fonts-text: "Inter", -apple-system, BlinkMacSystemFont, "San Francisco", Roboto,  "Segoe UI", "Helvetica Neue";
  --fontWeights-regular: 400;
  --fontWeights-bold: 700;
  --fontWeights-light: 300;
  --lineHeights-body: 140%;
  --lineHeights-auto: AUTO;
  --lineHeights-none: 1;
  --lineHeights-tight: 110%;
  --letterSpacings-normal: 0%;
  --letterSpacings-tight: -1%;
  --letterSpacings-tighter: -3%;
  --letterSpacings-wide: 5%;
  --borderWidths-default: 2px;
  --radii-default: 2px;
  --radii-round: 99999px;
  --shadows-1: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
}

.dark-theme {
  --colors-background: #000000;
  --colors-text: #f7f7f7;
  --colors-primary: var(--colors-yellow500);
  --colors-primaryContrast: var(--colors-grey900);
  --colors-primaryHighlight: var(--colors-yellow400);
  --colors-primaryLowlight: var(--colors-yellow600);
  --colors-primaryBackground: var(--colors-yellow900);
  --colors-primaryActive: #ffbb00aa;
  --colors-default: var(--colors-white);
  --colors-defaultHighlight: var(--colors-transparency200);
  --colors-defaultLowlight: var(--colors-grey400);
  --colors-defaultBackground: transparent;
  --colors-defaultContrast: var(--colors-black);
  --colors-defaultActive: var(--colors-transparency400);
  --colors-error: var(--colors-red500);
  --colors-errorHighlight: var(--colors-red400);
  --colors-errorLowlight: var(--colors-red600);
  --colors-errorBackground: var(--colors-red900);
  --colors-errorContrast: var(--colors-paper);
  --colors-errorActive: #ba2525aa;
  --colors-success: var(--colors-green500);
  --colors-successHighlight: var(--colors-green400);
  --colors-successLowlight: var(--colors-green600);
  --colors-successBackground: var(--colors-green900);
  --colors-successContrast: var(--colors-paper);
  --colors-successActive: #27ab83aa;
  --colors-warning: var(--colors-orange500);
  --colors-warningHighlight: var(--colors-orange400);
  --colors-warningLowlight: var(--colors-orange600);
  --colors-warningBackground: var(--colors-orange900);
  --colors-warningContrast: var(--colors-paper);
  --colors-warningActive: #e67635aa;
  --colors-info: var(--colors-blue500);
  --colors-infoHighlight: var(--colors-blue400);
  --colors-infoLowlight: var(--colors-blue600);
  --colors-infoBackground: var(--colors-blue900);
  --colors-infoContrast: var(--colors-paper);
  --colors-infoActive: #2680c2aa;
  --colors-paper: #222222;
}

@keyframes sxlk62l {
  from {
    height: 0;
  }

  to {
    height: cal(var(--radix-accordion-panel-height) + var(--sizes-6));
  }
}

@keyframes sxuj3zj {
  from {
    height: cal(var(--radix-accordion-panel-height) + var(--sizes-6));
  }

  to {
    height: 0;
  }
}

@global {
  text-size-adjust: 100%;
  text-rendering: optimizeLegibility;
}

html {
  overflow-x: hidden;
}

body {
  margin: 0;
}

* {
  margin: 0;
  padding: 0;
}

svg {
  display: block;
}

pre,
code {
  margin: 0;
  font-family: var(--fonts-monospace);
}

body,
button {
  font-family: var(--fonts-text);
}

.sxaxkyl {
  box-sizing: border-box;
  display: inline-block;
  flex-shrink: 0;
  -webkit-user-select: none;
  user-select: none;
  fill: currentColor;
}

.sxaxkyl-2obmh {
  color: inherit;
}

.sxyvlc9 {
  transition: transform 300ms;
}

[data-state=open] .sxyvlc9 {
  transform: rotate(180deg);
}

.sx3hatl {
  border-top: 1px solid var(--colors-defaultHighlight);
  border-radius: var(--radii-default);
  box-shadow: var(--shadows-1);
}

.sxiuevh {
  border-bottom: 1px solid var(--colors-defaultHighlight);
}

.sxht27n {
  background-color: transparent;
  border: none;
  padding: var(--space-4);
  flex: 1;
  text-align: left;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: var(--colors-text);
  width: 100%;
}

@media (any-hover: hover) {
  .sxht27n:hover {
    background-color: var(--colors-defaultHighlight);
  }
}

.sxtk02g {
  padding: var(--space-4);
  color: var(--colors-text);
}

.sxtk02g[data-state="open"] {
  animation: sxlk62l 300ms ease-out;
}

.sxtk02g[data-state="closed"] {
  animation: sxuj3zj 300ms ease-out;
}

:root,
.sxvxinr {
  --colors-yellow100: #ffeecc;
  --colors-yellow200: #ffde99;
  --colors-yellow300: #ffcd66;
  --colors-yellow400: #ffbd33;
  --colors-yellow500: #ffac00;
  --colors-yellow600: #cc8a00;
  --colors-yellow700: #996700;
  --colors-yellow800: #664500;
  --colors-yellow900: #332200;
  --colors-grey100: #d8d8d8;
  --colors-grey200: #b2b2b2;
  --colors-grey300: #8b8b8b;
  --colors-grey400: #656565;
  --colors-grey500: #3e3e3e;
  --colors-grey600: #323232;
  --colors-grey700: #252525;
  --colors-grey800: #191919;
  --colors-grey900: #0c0c0c;
  --colors-blue100: #d4e6f3;
  --colors-blue200: #a8cce7;
  --colors-blue300: #7db3da;
  --colors-blue400: #5199ce;
  --colors-blue500: #2680c2;
  --colors-blue600: #1e669b;
  --colors-blue700: #174d74;
  --colors-blue800: #0f334e;
  --colors-blue900: #081a27;
  --colors-green100: #d4eee6;
  --colors-green200: #a9ddcd;
  --colors-green300: #7dcdb5;
  --colors-green400: #52bc9c;
  --colors-green500: #27ab83;
  --colors-green600: #1f8969;
  --colors-green700: #17674f;
  --colors-green800: #104434;
  --colors-green900: #08221a;
  --colors-red100: #f1d3d3;
  --colors-red200: #e3a8a8;
  --colors-red300: #d67c7c;
  --colors-red400: #c85151;
  --colors-red500: #ba2525;
  --colors-red600: #951e1e;
  --colors-red700: #701616;
  --colors-red800: #4a0f0f;
  --colors-red900: #250707;
  --colors-orange100: #fae4d7;
  --colors-orange200: #f5c8ae;
  --colors-orange300: #f0ad86;
  --colors-orange400: #eb915d;
  --colors-orange500: #e67635;
  --colors-orange600: #b85e2a;
  --colors-orange700: #8a4720;
  --colors-orange800: #5c2f15;
  --colors-orange900: #2e180b;
  --colors-transparency100: hsla(0,0%,0%,0.1);
  --colors-transparency200: hsla(0,0%,0%,0.2);
  --colors-transparency300: hsla(0,0%,0%,0.3);
  --colors-transparency400: hsla(0,0%,0%,0.4);
  --colors-transparency500: hsla(0,0%,0%,0.5);
  --colors-transparency600: hsla(0,0%,0%,0.6);
  --colors-transparency700: hsla(0,0%,0%,0.7);
  --colors-transparency800: hsla(0,0%,0%,0.8);
  --colors-transparency900: hsla(0,0%,0%,0.9);
  --colors-brandYellow: #ffbb00;
  --colors-brandGrey: #565555;
  --colors-white: #FFFFFF;
  --colors-black: #000000;
  --colors-background: #f7f7f7;
  --colors-paper: var(--colors-white);
  --colors-text: #3b3b3b;
  --colors-primary: var(--colors-grey500);
  --colors-primaryHighlight: var(--colors-grey700);
  --colors-primaryLowlight: var(--colors-grey400);
  --colors-primaryBackground: var(--colors-grey100);
  --colors-primaryContrast: var(--colors-brandYellow);
  --colors-primaryActive: #ffbb00aa;
  --colors-default: var(--colors-black);
  --colors-defaultHighlight: var(--colors-transparency100);
  --colors-defaultLowlight: var(--colors-grey400);
  --colors-defaultBackground: transparent;
  --colors-defaultContrast: var(--colors-white);
  --colors-defaultActive: var(--colors-transparency200);
  --colors-error: var(--colors-red500);
  --colors-errorHighlight: var(--colors-red600);
  --colors-errorLowlight: var(--colors-red300);
  --colors-errorBackground: var(--colors-red100);
  --colors-errorContrast: var(--colors-paper);
  --colors-errorActive: #ba2525aa;
  --colors-success: var(--colors-green500);
  --colors-successHighlight: var(--colors-green600);
  --colors-successLowlight: var(--colors-green300);
  --colors-successBackground: var(--colors-green100);
  --colors-successContrast: var(--colors-paper);
  --colors-successActive: #27ab83aa;
  --colors-warning: var(--colors-orange500);
  --colors-warningHighlight: var(--colors-orange600);
  --colors-warningLowlight: var(--colors-orange300);
  --colors-warningBackground: var(--colors-orange100);
  --colors-warningContrast: var(--colors-paper);
  --colors-warningActive: #e67635aa;
  --colors-info: var(--colors-blue500);
  --colors-infoHighlight: var(--colors-blue600);
  --colors-infoLowlight: var(--colors-blue300);
  --colors-infoBackground: var(--colors-blue100);
  --colors-infoContrast: var(--colors-paper);
  --colors-infoActive: #2680c2aa;
  --space-0: 0px;
  --space-1: 4px;
  --space-2: 8px;
  --space-3: 12px;
  --space-4: 16px;
  --space-5: 24px;
  --space-6: 32px;
  --space-7: 48px;
  --space-8: 64px;
  --space-9: 96px;
  --space-10: 128px;
  --space-11: 192px;
  --space-12: 256px;
  --space-13: 384px;
  --space-14: 512px;
  --space-15: 640px;
  --space-16: 768px;
  --sizes-0: 0px;
  --sizes-1: 4px;
  --sizes-2: 8px;
  --sizes-3: 12px;
  --sizes-4: 16px;
  --sizes-5: 24px;
  --sizes-6: 32px;
  --sizes-7: 48px;
  --sizes-8: 64px;
  --sizes-9: 96px;
  --sizes-10: 128px;
  --sizes-11: 192px;
  --sizes-12: 256px;
  --sizes-13: 384px;
  --sizes-14: 512px;
  --sizes-15: 640px;
  --sizes-16: 768px;
  --sizes-sm: 600px;
  --sizes-md: 960px;
  --sizes-lg: 1280px;
  --sizes-xl: 1920px;
  --fontSizes-0: 16px;
  --fontSizes-1: 18px;
  --fontSizes-2: 20px;
  --fontSizes-3: 24px;
  --fontSizes-4: 30px;
  --fontSizes-5: 36px;
  --fontSizes-6: 48px;
  --fontSizes-7: 60px;
  --fontSizes-8: 72px;
  --fontSizes--2: 12px;
  --fontSizes--1: 14px;
  --fonts-system: -apple-system, BlinkMacSystemFont, "San Francisco", Roboto,  "Segoe UI", "Helvetica Neue";
  --fonts-display: "Helvetica Neue", "Segoe UI", Helvetica, Arial, sans-serif;
  --fonts-monospace: "SFMono-Regular", Consolas, "Liberation Mono", "Andale Mono", "Ubuntu Mono", Menlo, Courier, monospace;
  --fonts-text: "Inter", -apple-system, BlinkMacSystemFont, "San Francisco", Roboto,  "Segoe UI", "Helvetica Neue";
  --fontWeights-regular: 400;
  --fontWeights-bold: 700;
  --fontWeights-light: 300;
  --lineHeights-body: 140%;
  --lineHeights-auto: AUTO;
  --lineHeights-none: 1;
  --lineHeights-tight: 110%;
  --letterSpacings-normal: 0%;
  --letterSpacings-tight: -1%;
  --letterSpacings-tighter: -3%;
  --letterSpacings-wide: 5%;
  --borderWidths-default: 2px;
  --radii-default: 2px;
  --radii-round: 99999px;
  --shadows-1: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
}

<div
    class="dark-theme"
  >
    <div
      class="sx3hatl"
      type="single"
    >
      <div
        class="sxiuevh"
        data-state="closed"
      >
        <h3
          data-state="closed"
        >
          <button
            aria-controls="radix-id-6987702806-8"
            aria-expanded="false"
            class="sxht27n"
            data-state="closed"
            id="radix-id-6987702806-7"
          >
            Item 1
            <svg
              aria-hidden="true"
              class="sxaxkyl sxaxkyl-2obmh sxyvlc9"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-id-6987702806-7"
          class="sxtk02g"
          data-state="closed"
          hidden=""
          id="radix-id-6987702806-8"
          role="region"
          style="--radix-accordion-panel-height: var(--radix-collapsible-content-height);"
        />
      </div>
      <div
        class="sxiuevh"
        data-state="closed"
      >
        <h3
          data-state="closed"
        >
          <button
            aria-controls="radix-id-6987702806-10"
            aria-expanded="false"
            class="sxht27n"
            data-state="closed"
            id="radix-id-6987702806-9"
          >
            Item 2
            <svg
              aria-hidden="true"
              class="sxaxkyl sxaxkyl-2obmh sxyvlc9"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-id-6987702806-9"
          class="sxtk02g"
          data-state="closed"
          hidden=""
          id="radix-id-6987702806-10"
          role="region"
          style="--radix-accordion-panel-height: var(--radix-collapsible-content-height);"
        />
      </div>
      <div
        class="sxiuevh"
        data-state="closed"
      >
        <h3
          data-state="closed"
        >
          <button
            aria-controls="radix-id-6987702806-12"
            aria-expanded="false"
            class="sxht27n"
            data-state="closed"
            id="radix-id-6987702806-11"
          >
            Item 3
            <svg
              aria-hidden="true"
              class="sxaxkyl sxaxkyl-2obmh sxyvlc9"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-id-6987702806-11"
          class="sxtk02g"
          data-state="closed"
          hidden=""
          id="radix-id-6987702806-12"
          role="region"
          style="--radix-accordion-panel-height: var(--radix-collapsible-content-height);"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders light without error 1`] = `
<DocumentFragment>
  :root,
.sxvxinr {
  --colors-yellow100: #ffeecc;
  --colors-yellow200: #ffde99;
  --colors-yellow300: #ffcd66;
  --colors-yellow400: #ffbd33;
  --colors-yellow500: #ffac00;
  --colors-yellow600: #cc8a00;
  --colors-yellow700: #996700;
  --colors-yellow800: #664500;
  --colors-yellow900: #332200;
  --colors-grey100: #d8d8d8;
  --colors-grey200: #b2b2b2;
  --colors-grey300: #8b8b8b;
  --colors-grey400: #656565;
  --colors-grey500: #3e3e3e;
  --colors-grey600: #323232;
  --colors-grey700: #252525;
  --colors-grey800: #191919;
  --colors-grey900: #0c0c0c;
  --colors-blue100: #d4e6f3;
  --colors-blue200: #a8cce7;
  --colors-blue300: #7db3da;
  --colors-blue400: #5199ce;
  --colors-blue500: #2680c2;
  --colors-blue600: #1e669b;
  --colors-blue700: #174d74;
  --colors-blue800: #0f334e;
  --colors-blue900: #081a27;
  --colors-green100: #d4eee6;
  --colors-green200: #a9ddcd;
  --colors-green300: #7dcdb5;
  --colors-green400: #52bc9c;
  --colors-green500: #27ab83;
  --colors-green600: #1f8969;
  --colors-green700: #17674f;
  --colors-green800: #104434;
  --colors-green900: #08221a;
  --colors-red100: #f1d3d3;
  --colors-red200: #e3a8a8;
  --colors-red300: #d67c7c;
  --colors-red400: #c85151;
  --colors-red500: #ba2525;
  --colors-red600: #951e1e;
  --colors-red700: #701616;
  --colors-red800: #4a0f0f;
  --colors-red900: #250707;
  --colors-orange100: #fae4d7;
  --colors-orange200: #f5c8ae;
  --colors-orange300: #f0ad86;
  --colors-orange400: #eb915d;
  --colors-orange500: #e67635;
  --colors-orange600: #b85e2a;
  --colors-orange700: #8a4720;
  --colors-orange800: #5c2f15;
  --colors-orange900: #2e180b;
  --colors-transparency100: hsla(0,0%,0%,0.1);
  --colors-transparency200: hsla(0,0%,0%,0.2);
  --colors-transparency300: hsla(0,0%,0%,0.3);
  --colors-transparency400: hsla(0,0%,0%,0.4);
  --colors-transparency500: hsla(0,0%,0%,0.5);
  --colors-transparency600: hsla(0,0%,0%,0.6);
  --colors-transparency700: hsla(0,0%,0%,0.7);
  --colors-transparency800: hsla(0,0%,0%,0.8);
  --colors-transparency900: hsla(0,0%,0%,0.9);
  --colors-brandYellow: #ffbb00;
  --colors-brandGrey: #565555;
  --colors-white: #FFFFFF;
  --colors-black: #000000;
  --colors-background: #f7f7f7;
  --colors-paper: var(--colors-white);
  --colors-text: #3b3b3b;
  --colors-primary: var(--colors-grey500);
  --colors-primaryHighlight: var(--colors-grey700);
  --colors-primaryLowlight: var(--colors-grey400);
  --colors-primaryBackground: var(--colors-grey100);
  --colors-primaryContrast: var(--colors-brandYellow);
  --colors-primaryActive: #ffbb00aa;
  --colors-default: var(--colors-black);
  --colors-defaultHighlight: var(--colors-transparency100);
  --colors-defaultLowlight: var(--colors-grey400);
  --colors-defaultBackground: transparent;
  --colors-defaultContrast: var(--colors-white);
  --colors-defaultActive: var(--colors-transparency200);
  --colors-error: var(--colors-red500);
  --colors-errorHighlight: var(--colors-red600);
  --colors-errorLowlight: var(--colors-red300);
  --colors-errorBackground: var(--colors-red100);
  --colors-errorContrast: var(--colors-paper);
  --colors-errorActive: #ba2525aa;
  --colors-success: var(--colors-green500);
  --colors-successHighlight: var(--colors-green600);
  --colors-successLowlight: var(--colors-green300);
  --colors-successBackground: var(--colors-green100);
  --colors-successContrast: var(--colors-paper);
  --colors-successActive: #27ab83aa;
  --colors-warning: var(--colors-orange500);
  --colors-warningHighlight: var(--colors-orange600);
  --colors-warningLowlight: var(--colors-orange300);
  --colors-warningBackground: var(--colors-orange100);
  --colors-warningContrast: var(--colors-paper);
  --colors-warningActive: #e67635aa;
  --colors-info: var(--colors-blue500);
  --colors-infoHighlight: var(--colors-blue600);
  --colors-infoLowlight: var(--colors-blue300);
  --colors-infoBackground: var(--colors-blue100);
  --colors-infoContrast: var(--colors-paper);
  --colors-infoActive: #2680c2aa;
  --space-0: 0px;
  --space-1: 4px;
  --space-2: 8px;
  --space-3: 12px;
  --space-4: 16px;
  --space-5: 24px;
  --space-6: 32px;
  --space-7: 48px;
  --space-8: 64px;
  --space-9: 96px;
  --space-10: 128px;
  --space-11: 192px;
  --space-12: 256px;
  --space-13: 384px;
  --space-14: 512px;
  --space-15: 640px;
  --space-16: 768px;
  --sizes-0: 0px;
  --sizes-1: 4px;
  --sizes-2: 8px;
  --sizes-3: 12px;
  --sizes-4: 16px;
  --sizes-5: 24px;
  --sizes-6: 32px;
  --sizes-7: 48px;
  --sizes-8: 64px;
  --sizes-9: 96px;
  --sizes-10: 128px;
  --sizes-11: 192px;
  --sizes-12: 256px;
  --sizes-13: 384px;
  --sizes-14: 512px;
  --sizes-15: 640px;
  --sizes-16: 768px;
  --sizes-sm: 600px;
  --sizes-md: 960px;
  --sizes-lg: 1280px;
  --sizes-xl: 1920px;
  --fontSizes-0: 16px;
  --fontSizes-1: 18px;
  --fontSizes-2: 20px;
  --fontSizes-3: 24px;
  --fontSizes-4: 30px;
  --fontSizes-5: 36px;
  --fontSizes-6: 48px;
  --fontSizes-7: 60px;
  --fontSizes-8: 72px;
  --fontSizes--2: 12px;
  --fontSizes--1: 14px;
  --fonts-system: -apple-system, BlinkMacSystemFont, "San Francisco", Roboto,  "Segoe UI", "Helvetica Neue";
  --fonts-display: "Helvetica Neue", "Segoe UI", Helvetica, Arial, sans-serif;
  --fonts-monospace: "SFMono-Regular", Consolas, "Liberation Mono", "Andale Mono", "Ubuntu Mono", Menlo, Courier, monospace;
  --fonts-text: "Inter", -apple-system, BlinkMacSystemFont, "San Francisco", Roboto,  "Segoe UI", "Helvetica Neue";
  --fontWeights-regular: 400;
  --fontWeights-bold: 700;
  --fontWeights-light: 300;
  --lineHeights-body: 140%;
  --lineHeights-auto: AUTO;
  --lineHeights-none: 1;
  --lineHeights-tight: 110%;
  --letterSpacings-normal: 0%;
  --letterSpacings-tight: -1%;
  --letterSpacings-tighter: -3%;
  --letterSpacings-wide: 5%;
  --borderWidths-default: 2px;
  --radii-default: 2px;
  --radii-round: 99999px;
  --shadows-1: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
}

@keyframes sxlk62l {
  from {
    height: 0;
  }

  to {
    height: cal(var(--radix-accordion-panel-height) + var(--sizes-6));
  }
}

@keyframes sxuj3zj {
  from {
    height: cal(var(--radix-accordion-panel-height) + var(--sizes-6));
  }

  to {
    height: 0;
  }
}

@global {
  text-size-adjust: 100%;
  text-rendering: optimizeLegibility;
}

html {
  overflow-x: hidden;
}

body {
  margin: 0;
}

* {
  margin: 0;
  padding: 0;
}

svg {
  display: block;
}

pre,
code {
  margin: 0;
  font-family: var(--fonts-monospace);
}

body,
button {
  font-family: var(--fonts-text);
}

.sxaxkyl {
  box-sizing: border-box;
  display: inline-block;
  flex-shrink: 0;
  -webkit-user-select: none;
  user-select: none;
  fill: currentColor;
}

.sxaxkyl-2obmh {
  color: inherit;
}

.sxyvlc9 {
  transition: transform 300ms;
}

[data-state=open] .sxyvlc9 {
  transform: rotate(180deg);
}

.sx3hatl {
  border-top: 1px solid var(--colors-defaultHighlight);
  border-radius: var(--radii-default);
  box-shadow: var(--shadows-1);
}

.sxiuevh {
  border-bottom: 1px solid var(--colors-defaultHighlight);
}

.sxht27n {
  background-color: transparent;
  border: none;
  padding: var(--space-4);
  flex: 1;
  text-align: left;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: var(--colors-text);
  width: 100%;
}

@media (any-hover: hover) {
  .sxht27n:hover {
    background-color: var(--colors-defaultHighlight);
  }
}

.sxtk02g {
  padding: var(--space-4);
  color: var(--colors-text);
}

.sxtk02g[data-state="open"] {
  animation: sxlk62l 300ms ease-out;
}

.sxtk02g[data-state="closed"] {
  animation: sxuj3zj 300ms ease-out;
}

:root,
.sxvxinr {
  --colors-yellow100: #ffeecc;
  --colors-yellow200: #ffde99;
  --colors-yellow300: #ffcd66;
  --colors-yellow400: #ffbd33;
  --colors-yellow500: #ffac00;
  --colors-yellow600: #cc8a00;
  --colors-yellow700: #996700;
  --colors-yellow800: #664500;
  --colors-yellow900: #332200;
  --colors-grey100: #d8d8d8;
  --colors-grey200: #b2b2b2;
  --colors-grey300: #8b8b8b;
  --colors-grey400: #656565;
  --colors-grey500: #3e3e3e;
  --colors-grey600: #323232;
  --colors-grey700: #252525;
  --colors-grey800: #191919;
  --colors-grey900: #0c0c0c;
  --colors-blue100: #d4e6f3;
  --colors-blue200: #a8cce7;
  --colors-blue300: #7db3da;
  --colors-blue400: #5199ce;
  --colors-blue500: #2680c2;
  --colors-blue600: #1e669b;
  --colors-blue700: #174d74;
  --colors-blue800: #0f334e;
  --colors-blue900: #081a27;
  --colors-green100: #d4eee6;
  --colors-green200: #a9ddcd;
  --colors-green300: #7dcdb5;
  --colors-green400: #52bc9c;
  --colors-green500: #27ab83;
  --colors-green600: #1f8969;
  --colors-green700: #17674f;
  --colors-green800: #104434;
  --colors-green900: #08221a;
  --colors-red100: #f1d3d3;
  --colors-red200: #e3a8a8;
  --colors-red300: #d67c7c;
  --colors-red400: #c85151;
  --colors-red500: #ba2525;
  --colors-red600: #951e1e;
  --colors-red700: #701616;
  --colors-red800: #4a0f0f;
  --colors-red900: #250707;
  --colors-orange100: #fae4d7;
  --colors-orange200: #f5c8ae;
  --colors-orange300: #f0ad86;
  --colors-orange400: #eb915d;
  --colors-orange500: #e67635;
  --colors-orange600: #b85e2a;
  --colors-orange700: #8a4720;
  --colors-orange800: #5c2f15;
  --colors-orange900: #2e180b;
  --colors-transparency100: hsla(0,0%,0%,0.1);
  --colors-transparency200: hsla(0,0%,0%,0.2);
  --colors-transparency300: hsla(0,0%,0%,0.3);
  --colors-transparency400: hsla(0,0%,0%,0.4);
  --colors-transparency500: hsla(0,0%,0%,0.5);
  --colors-transparency600: hsla(0,0%,0%,0.6);
  --colors-transparency700: hsla(0,0%,0%,0.7);
  --colors-transparency800: hsla(0,0%,0%,0.8);
  --colors-transparency900: hsla(0,0%,0%,0.9);
  --colors-brandYellow: #ffbb00;
  --colors-brandGrey: #565555;
  --colors-white: #FFFFFF;
  --colors-black: #000000;
  --colors-background: #f7f7f7;
  --colors-paper: var(--colors-white);
  --colors-text: #3b3b3b;
  --colors-primary: var(--colors-grey500);
  --colors-primaryHighlight: var(--colors-grey700);
  --colors-primaryLowlight: var(--colors-grey400);
  --colors-primaryBackground: var(--colors-grey100);
  --colors-primaryContrast: var(--colors-brandYellow);
  --colors-primaryActive: #ffbb00aa;
  --colors-default: var(--colors-black);
  --colors-defaultHighlight: var(--colors-transparency100);
  --colors-defaultLowlight: var(--colors-grey400);
  --colors-defaultBackground: transparent;
  --colors-defaultContrast: var(--colors-white);
  --colors-defaultActive: var(--colors-transparency200);
  --colors-error: var(--colors-red500);
  --colors-errorHighlight: var(--colors-red600);
  --colors-errorLowlight: var(--colors-red300);
  --colors-errorBackground: var(--colors-red100);
  --colors-errorContrast: var(--colors-paper);
  --colors-errorActive: #ba2525aa;
  --colors-success: var(--colors-green500);
  --colors-successHighlight: var(--colors-green600);
  --colors-successLowlight: var(--colors-green300);
  --colors-successBackground: var(--colors-green100);
  --colors-successContrast: var(--colors-paper);
  --colors-successActive: #27ab83aa;
  --colors-warning: var(--colors-orange500);
  --colors-warningHighlight: var(--colors-orange600);
  --colors-warningLowlight: var(--colors-orange300);
  --colors-warningBackground: var(--colors-orange100);
  --colors-warningContrast: var(--colors-paper);
  --colors-warningActive: #e67635aa;
  --colors-info: var(--colors-blue500);
  --colors-infoHighlight: var(--colors-blue600);
  --colors-infoLowlight: var(--colors-blue300);
  --colors-infoBackground: var(--colors-blue100);
  --colors-infoContrast: var(--colors-paper);
  --colors-infoActive: #2680c2aa;
  --space-0: 0px;
  --space-1: 4px;
  --space-2: 8px;
  --space-3: 12px;
  --space-4: 16px;
  --space-5: 24px;
  --space-6: 32px;
  --space-7: 48px;
  --space-8: 64px;
  --space-9: 96px;
  --space-10: 128px;
  --space-11: 192px;
  --space-12: 256px;
  --space-13: 384px;
  --space-14: 512px;
  --space-15: 640px;
  --space-16: 768px;
  --sizes-0: 0px;
  --sizes-1: 4px;
  --sizes-2: 8px;
  --sizes-3: 12px;
  --sizes-4: 16px;
  --sizes-5: 24px;
  --sizes-6: 32px;
  --sizes-7: 48px;
  --sizes-8: 64px;
  --sizes-9: 96px;
  --sizes-10: 128px;
  --sizes-11: 192px;
  --sizes-12: 256px;
  --sizes-13: 384px;
  --sizes-14: 512px;
  --sizes-15: 640px;
  --sizes-16: 768px;
  --sizes-sm: 600px;
  --sizes-md: 960px;
  --sizes-lg: 1280px;
  --sizes-xl: 1920px;
  --fontSizes-0: 16px;
  --fontSizes-1: 18px;
  --fontSizes-2: 20px;
  --fontSizes-3: 24px;
  --fontSizes-4: 30px;
  --fontSizes-5: 36px;
  --fontSizes-6: 48px;
  --fontSizes-7: 60px;
  --fontSizes-8: 72px;
  --fontSizes--2: 12px;
  --fontSizes--1: 14px;
  --fonts-system: -apple-system, BlinkMacSystemFont, "San Francisco", Roboto,  "Segoe UI", "Helvetica Neue";
  --fonts-display: "Helvetica Neue", "Segoe UI", Helvetica, Arial, sans-serif;
  --fonts-monospace: "SFMono-Regular", Consolas, "Liberation Mono", "Andale Mono", "Ubuntu Mono", Menlo, Courier, monospace;
  --fonts-text: "Inter", -apple-system, BlinkMacSystemFont, "San Francisco", Roboto,  "Segoe UI", "Helvetica Neue";
  --fontWeights-regular: 400;
  --fontWeights-bold: 700;
  --fontWeights-light: 300;
  --lineHeights-body: 140%;
  --lineHeights-auto: AUTO;
  --lineHeights-none: 1;
  --lineHeights-tight: 110%;
  --letterSpacings-normal: 0%;
  --letterSpacings-tight: -1%;
  --letterSpacings-tighter: -3%;
  --letterSpacings-wide: 5%;
  --borderWidths-default: 2px;
  --radii-default: 2px;
  --radii-round: 99999px;
  --shadows-1: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
}

<div
    class="light-theme"
  >
    <div
      class="sx3hatl"
      type="single"
    >
      <div
        class="sxiuevh"
        data-state="closed"
      >
        <h3
          data-state="closed"
        >
          <button
            aria-controls="radix-id-6987702806-2"
            aria-expanded="false"
            class="sxht27n"
            data-state="closed"
            id="radix-id-6987702806-1"
          >
            Item 1
            <svg
              aria-hidden="true"
              class="sxaxkyl sxaxkyl-2obmh sxyvlc9"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-id-6987702806-1"
          class="sxtk02g"
          data-state="closed"
          hidden=""
          id="radix-id-6987702806-2"
          role="region"
          style="--radix-accordion-panel-height: var(--radix-collapsible-content-height);"
        />
      </div>
      <div
        class="sxiuevh"
        data-state="closed"
      >
        <h3
          data-state="closed"
        >
          <button
            aria-controls="radix-id-6987702806-4"
            aria-expanded="false"
            class="sxht27n"
            data-state="closed"
            id="radix-id-6987702806-3"
          >
            Item 2
            <svg
              aria-hidden="true"
              class="sxaxkyl sxaxkyl-2obmh sxyvlc9"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-id-6987702806-3"
          class="sxtk02g"
          data-state="closed"
          hidden=""
          id="radix-id-6987702806-4"
          role="region"
          style="--radix-accordion-panel-height: var(--radix-collapsible-content-height);"
        />
      </div>
      <div
        class="sxiuevh"
        data-state="closed"
      >
        <h3
          data-state="closed"
        >
          <button
            aria-controls="radix-id-6987702806-6"
            aria-expanded="false"
            class="sxht27n"
            data-state="closed"
            id="radix-id-6987702806-5"
          >
            Item 3
            <svg
              aria-hidden="true"
              class="sxaxkyl sxaxkyl-2obmh sxyvlc9"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-id-6987702806-5"
          class="sxtk02g"
          data-state="closed"
          hidden=""
          id="radix-id-6987702806-6"
          role="region"
          style="--radix-accordion-panel-height: var(--radix-collapsible-content-height);"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
